# xAI-medical-diagnosis

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  xAI_medical_analysis.ipynb
data/processed/: preprocess_artifacts.pkl  split_artifacts.pkl  x_dev.csv  x_test.csv  x_train.csv  x_val.csv  y_dev.csv  y_test.csv  y_train.csv  y_val.csv
data/raw/: diabetes.csv
data/symbolic/: symbolic_diabetes.csv  symbolic_x_test.csv  symbolic_x_train.csv  symbolic_x_val.csv  x_full_symbolic.csv  x_test_symbolic.csv  x_train_symbolic.csv  x_val_symbolic.csv  y_full_symbolic.csv  y_test_symbolic.csv  y_train_symbolic.csv  y_val_symbolic.csv
models/: dt_model.pkl  dt_oof_probs.npy  mlp_model.pth  mlp_oof_probs.npy  preprocessor.pkl  rf_model.pkl  rf_oof_probs.npy  test_evaluation_results.json  thresholds.json  y_dev.npy
results/: tuned_hyperparameters.json  tuning_results.json
results/dice_interpretations/: decision_tree_patient_000_metadata.json  decision_tree_patient_001_metadata.json  decision_tree_patient_002_metadata.json  decision_tree_patient_003_metadata.json  decision_tree_patient_004_metadata.json  (+10 more)
src/: BK.pl  app.py  evaluate_final.py  evaluate_models.py  explain_models.py  explainability.py  generate_counterfactuals.py  interpret_counterfactuals.py  interpretability.py  meta_data.info  models.py  neg_example.n  negative_bottom_clause  optimise_threshold.py  pos_example.f  positive_bottom_clause  preprocessing.py  train_cv.py  train_final.py  train_models.py  tune_hyperparameters.py  tune_thresholds.py
src/pygol_outputs/: BK.pl  (+5 more)
tests/: test_inference.py
(+66 files in other folders)
