[project]
name = "xai-medical-diagnosis"
version = "0.1.0"
description = "explainable medical diagnosis project for final year"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dice-ml>=0.12",
    "lime>=0.2.0.1",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "shap>=0.49.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.11",
    "ty>=0.0.11",
]

[tool.ruff]
line-length = 120
select = [
    "ALL",
]