[project]
name = "xai-medical-diagnosis"
version = "0.1.0"
description = "explainable medical diagnosis project for final year"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cython>=3.2.4",
    "dice-ml>=0.12",
    "janus-swi>=1.5.2",
    "lime>=0.2.0.1",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pygol",
    "scikit-learn>=1.8.0",
    "shap>=0.49.1",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.11",
    "ty>=0.0.11",
]

[tool.ruff]
line-length = 120
select = [
    "ALL",
]

[tool.uv.sources]
pygol = { git = "https://github.com/danyvarghese/PyGol.git", rev = "main" }
